li spacing fix

--- a/themes/hugo-tanka/static/css/custom.css
+++ b/themes/hugo-tanka/static/css/custom.css
@@ -111,8 +111,8 @@ hr {
 }
 
 .content .markdown li {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    /*margin-top: 1rem;*/
+    /*margin-bottom: 1rem;*/
 }
 
 .content twitterwidget {
